[project]
name = "elevenlabs-voice-cycle"
version = "0.1.0"
description = "Minimal end-to-end voice cycle using ElevenLabs API: record audio → speech-to-text → text-to-speech → playback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.46.0",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
